6430553: MouseClick event should not be fired if MouseRelease happened without MousePress

Verify that the there was a PRESS event before sending CLICK event

Reviewed-by: son, dcherepanov